<resources>
    <string name="app_name">Smart Grocery Shopping</string>
    <string name="txtDishName">Dish Name</string>
    <string name="txtDishDesc">Dish Description</string>
    <string name="imgViewDesc">Dish Image</string>
    <string name="fabCartDesc">View Cart</string>
    <string name="fabAddToCart">Add To Cart</string>
    <string name="iconToolbarCartDesc">Meal Cart</string>
    <string name="fabOrderText">Confirm order</string>
    <string name="btnBackArrow">Go back button</string>
    <string name="txtProcessing">Order is processing</string>
    <string name="txtOrderedSuccessfully">Ordered Successfully</string>
    <string name="btnTextBackToMain">Back to main</string>
    <string name="txtTitleHistory">Orders History</string>
    <string name="txtIngredientsTitle">Ingredients</string>
    <string name="txtDishesTitle">Your Dishes</string>
    <string name="imgSmileDescription">Smiley face</string>
    <string name="editTextDescription">Number of dishes</string>
    <string name="btnUpdateText">Update</string>
    <string name="imgViewCancelTextDesc">Cancel</string>
    <string name="txtOrdersHistory">Orders History</string>
    <string name="textNumberOfPortions">Number Of Portions</string>
    <string name="empty_cart">-</string>
    <string name="error_dish_load">Dish load error. Try again!</string>
    <string name="error_dish_information_load">Failed to load dish information! Try again!</string>
    <string name="error_add_dish_to_cart">The dish was not added to the cart!</string>
    <string name="success_add_dish_to_cart">Dish added successfully</string>
    <string name="ordersHistory">Orders history</string>
    <string name="clearCart">Clear cart</string>
    <string name="error_cart_item_load">Error of cart items loading</string>
    <string name="error_ingredient_item_load">Error ingredient items loading</string>
    <string name="error_post_order_load">Error of order posting</string>
    <string name="error_update_cart_load">Error of cart updating</string>
    <string name="error_order_history_load">Error of order history loading</string>
    <string name="item_updated_message">Item updated</string>
    <string name="empty_cart_error_message">Cart is empty! Add some dishes first!</string>
    <string name="error_empty_car">The Cart Is Empty. \nPlease Add A Dish And Try Again.</string>

</resources>