<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#006C5F"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Smart Grocery Shopping"
        app:titleMarginStart="40dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDish"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imageViewDish"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/imgViewDesc"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/textViewDishName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewDish"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/txtDishName"
            android:textColor="#000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewDishDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewDishName"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/txtDishDesc"
            android:textColor="#000"
            android:textSize="14sp" />

    </RelativeLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBasket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/fabCartDesc"
        android:src="@drawable/icon_show_cart" />
</LinearLayout>