<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#BFEBE3"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageViewDish"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/imgViewDesc"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <TextView
                android:id="@+id/textViewDishName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewDish"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/txtDishName"
                android:textColor="#000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewDishDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewDishName"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/txtDishDesc"
                android:textColor="#000"
                android:textSize="14sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>